@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{20458D50-3D54-45DD-9E22-5B2289B6AB91}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="BindingEnvironment.cs" />
     <Compile Include="Commands\CompositeCommand.cs" />
+    <Compile Include="Commands\SetValueCommand.cs" />
     <Compile Include="Commands\GlobalCommand.cs" />
     <Compile Include="Commands\VarCommand.cs" />
     <Compile Include="Commands\GoCommand.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Commands\SetCommand.cs" />
     <Compile Include="Expressions\ArrayExpression.cs" />
     <Compile Include="Expressions\ConcatenateExpression.cs" />
+    <Compile Include="Expressions\GetValueExpression.cs" />
     <Compile Include="Expressions\InvokeExpressionExpression.cs" />
     <Compile Include="Expressions\InitializeNewArrayExpression.cs" />
     <Compile Include="Expressions\NewArrayExpression.cs" />
@@ -72,6 +74,8 @@
     <Compile Include="ExpressionUtilities.cs" />
     <Compile Include="IBindingEnvironment.cs" />
     <Compile Include="Language\Channel.cs" />
+    <Compile Include="Language\IChannel.cs" />
+    <Compile Include="Language\IReference.cs" />
     <Compile Include="Language\ILocalCallable.cs" />
     <Compile Include="Language\IncrementOperator.cs" />
     <Compile Include="Language\DynamicClass.cs" />
